--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,6 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 uvicorn==0.37.0
-uvloop==0.20.2; platform_system != "Windows"
+uvloop==0.20.2; platform_system == "MacOS"
 watchfiles==1.1.0
 websockets==15.0.1
