--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ annotated-types==0.7.0
 anyio==4.11.0
 asyncpg==0.30.0
 bcrypt==4.0.1
+certifi==2025.10.5
 cffi==2.0.0
 click==8.3.0
+colorama==0.4.6
 cryptography==46.0.2
 ecdsa==0.19.1
 fastapi==0.118.0
@@ -13,16 +15,24 @@ fastapi-cache2==0.2.2
 fastapi-limiter==0.1.6
 greenlet==3.2.4
 h11==0.16.0
+httpcore==1.0.9
 httptools==0.6.4
+httpx==0.28.1
 idna==3.10
+iniconfig==2.3.0
 Mako==1.3.10
 MarkupSafe==3.0.3
+packaging==25.0
 passlib==1.7.4
 pendulum==3.1.0
+pluggy==1.6.0
 pyasn1==0.6.1
 pycparser==2.23
 pydantic==2.12.0
 pydantic_core==2.41.1
+Pygments==2.19.2
+pytest==8.4.2
+pytest-asyncio==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
